--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "12.0.4",
@@ -17,6 +17,7 @@
     "@types/react": "17.0.36",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
+    "husky": "^7.0.4",
     "typescript": "4.5.2"
   }
 }
