--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@commitlint/cli": "^15.0.0",
+    "@commitlint/config-conventional": "^15.0.0",
     "@types/node": "16.11.10",
     "@types/react": "17.0.36",
     "eslint": "7",
