--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "lint": "eslint .",
+    "fmt": "prettier './**/*.{ts,tsx,json,css,scss}' -w --ignore-path .gitignore",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -19,7 +21,9 @@
     "@types/react": "17.0.36",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
+    "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.4",
+    "prettier": "2.4.1",
     "typescript": "4.5.2"
   }
 }
