--- a/package.json
+++ b/package.json
@@ -24,6 +24,15 @@
     "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.4",
     "prettier": "2.4.1",
+    "remark-cli": "^10.0.1",
+    "remark-frontmatter": "^4.0.1",
+    "remark-gfm": "^3.0.1",
+    "remark-lint-linebreak-style": "^3.1.0",
+    "remark-lint-no-missing-blank-lines": "^3.1.0",
+    "remark-preset-lint-consistent": "^5.1.0",
+    "remark-preset-lint-markdown-style-guide": "^5.1.1",
+    "remark-preset-lint-recommended": "^6.1.1",
+    "remark-stringify": "^10.0.2",
     "typescript": "4.5.2"
   }
 }
