--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-next": "12.0.4",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.4",
+    "markdownlint-cli2": "^0.3.2",
     "prettier": "2.4.1",
     "remark-cli": "^10.0.1",
     "remark-frontmatter": "^4.0.1",
