--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
   "devDependencies": {
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
+    "@proofdict/textlint-rule-proofdict": "^3.1.2",
+    "@textlint-ja/textlint-rule-no-filler": "^1.1.0",
+    "@textlint-ja/textlint-rule-no-insert-dropping-sa": "^2.0.1",
+    "@textlint-ja/textlint-rule-no-synonyms": "^1.3.0",
+    "@textlint-rule/textlint-rule-no-duplicate-abbr": "^1.0.2",
     "@types/node": "16.11.10",
     "@types/react": "17.0.36",
     "eslint": "7",
@@ -34,6 +39,20 @@
     "remark-preset-lint-markdown-style-guide": "^5.1.1",
     "remark-preset-lint-recommended": "^6.1.1",
     "remark-stringify": "^10.0.2",
+    "sudachi-synonyms-dictionary": "^9.0.0",
+    "textlint": "^12.1.0",
+    "textlint-rule-date-weekday-mismatch": "^1.0.6",
+    "textlint-rule-doubled-spaces": "^1.0.0",
+    "textlint-rule-first-sentence-length": "^1.0.1",
+    "textlint-rule-ja-hiragana-hojodoushi": "^1.0.4",
+    "textlint-rule-ja-hiragana-keishikimeishi": "^1.1.0",
+    "textlint-rule-ja-space-around-code": "^2.2.0",
+    "textlint-rule-no-dead-link": "^4.8.0",
+    "textlint-rule-no-mixed-zenkaku-and-hankaku-alphabet": "^1.0.1",
+    "textlint-rule-prefer-tari-tari": "^1.0.3",
+    "textlint-rule-preset-ja-technical-writing": "^7.0.0",
+    "textlint-rule-terminology": "^2.1.5",
+    "textlint-rule-use-si-units": "^1.0.2",
     "typescript": "4.5.2"
   }
 }
